# backend/api/helpers/base_name.py
@@ -10,6 +10,7 @@ LOGIN = "login"
 PASSWORD = "password"
 ID_USER = "id_user"
 NAME = "name"
+INFORMATION = "information"
 SURNAME = "surname"
 EMAIL = "email"
 SEX = "sex"
