# backend/route/route_list.py
@@ -1,5 +1,7 @@
 from route.RouteService import Auth
+from route.RouteRegistration import Reg
 
 ROUTES = {
     Auth: '/api/v1/auth',
+    Reg: '/api/v1/reg',
 }
